apps/memos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
  labels:
    app: memos
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:0.27.1
          ports:
            - containerPort: 5230
          resources:
            requests:
              cpu: "25m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5230
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5230
            initialDelaySeconds: 5
            periodSeconds: 5
