apps/memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
spec:
  selector:
    app: memos
  ports:
    - port: 5230
      targetPort: 5230
