apps/memos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos
  namespace: memos
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: memos.bisnaguete.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos
                port:
                  number: 5230
  tls:
    - hosts:
        - memos.bisnaguete.xyz
      secretName: memos-tls
